--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,12 @@
 # ----------------------------------------
 #   Configuration File for Report plugin
 # ----------------------------------------
+    
+# Spam filter minimums
+minimum:
 
-# The minimum levenshtein difference for the spam filter
-min-distance: 6
-
-# The maximum string length for reports and comments
-max-length: 100
-
-# The minimum number of words required for a report
-min-words: 3
+    # Minimum levenshtein distance for determining string similarity
+    distance: 6
+    
+    # Minimum word count for determining spam probability
+    words: 3
